<resources>
    <string name="app_name">Gen\'s Draft Portfolio</string>
    <string name="enter">Enter</string>
    <string name="welcomeMessage">Gen\'s Portfolio Project</string>
    <string name="compIcon">compIcon</string>
    <string name="menuIcon">menuIcon</string>
    <string name="next_page">Next Page</string>
    <string name="second_page">Second Page</string>
    <string name="about">About</string>
    <string name="contact">Contact</string>
    <string name="portfolio">Portfolio</string>
    <string name="project1">TODO</string>
    <string name="project2">TODO</string>
    <string name="project6">project 6</string>
    <string name="project">TODO</string>
    <string name="project5">TODO</string>
    <string name="project4">TODO</string>
    <string name="project3">TODO</string>
    <string name="gitHub">Git Hub</string>
    <string name="linkedIn">Linkedin</string>
    <string name="email">Email</string>
    <string name="message">Message</string>
    <string name="subject">Subject</string>
    <string name="recipient">Recipient</string>
    <string name="emailBody" />
    <string name="subjectBody" />
    <string name="btnSendemail">Send Email</string>
    <string name="recipientBody" />
    <string name="send_email">Send Email</string>
    <string name="write_your_message_here">Write your message here</string>
    <string name="enter_your_subject_here">Enter your Subject here</string>
    <string name="enter_recipient_email_address">Enter Recipient Email Address</string>
    <string name="send_me_an_email">Send Me An Email</string>
</resources>