<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/send_me_an_email"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_mail_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/white"
        android:hint="@string/enter_recipient_email_address"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColorHint="#757575"
        android:textSize="18sp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edit_mail_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:autofillHints=""
        android:background="@color/white"
        android:hint="@string/enter_your_subject_here"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColorHint="#757575"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_mail_message"
        android:layout_width="380dp"
        android:layout_height="279dp"
        android:layout_margin="15dp"
        android:autofillHints=""
        android:background="@color/white"
        android:hint="@string/write_your_message_here"
        android:inputType="text"
        android:lines="6"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColorHint="#757575"
        android:textSize="18sp" />

    <Button
        android:id="@+id/send_email_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/send_email"
        android:textColor="#263238"
        android:textSize="16sp" />
</LinearLayout>