<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#157B88"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="359dp"
        android:layout_height="66dp"
        android:layout_marginStart="94dp"
        android:layout_marginTop="264dp"
        android:layout_marginEnd="95dp"
        android:fontFamily="monospace"
        android:text="@string/welcomeMessage"
        android:textAlignment="center"
        android:textColor="#212121"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="139dp"
        android:layout_height="150dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="129dp"
        android:layout_marginBottom="29dp"
        android:contentDescription="@string/compIcon"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/noun_software_4953927" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="63dp"
        android:layout_height="65dp"
        android:layout_marginStart="341dp"
        android:layout_marginBottom="189dp"
        android:contentDescription="@string/menuIcon"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/noun_menu_1551553" />

    <Button
        android:id="@+id/button"
        android:layout_width="179dp"
        android:layout_height="81dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="149dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="175dp"
        android:fontFamily="monospace"
        android:text="@string/next_page"
        android:textColor="#81D4FA"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>