<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#157B88"
    tools:context=".MainMenu">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#157B88"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="139dp"
            android:layout_height="150dp"
            android:layout_marginStart="128dp"
            android:layout_marginTop="67dp"
            android:layout_marginEnd="129dp"
            android:contentDescription="@string/compIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.533"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/noun_software_4953927" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="63dp"
            android:layout_height="65dp"
            android:layout_marginStart="341dp"
            android:contentDescription="@string/menuIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.571"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/noun_menu_1551553" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="63dp"
        android:layout_height="65dp"
        android:layout_marginStart="341dp"
        android:layout_marginBottom="189dp"
        android:contentDescription="@string/menuIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/noun_menu_1551553" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="139dp"
        android:layout_height="150dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="129dp"
        android:layout_marginBottom="29dp"
        android:contentDescription="@string/compIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/noun_software_4953927" />

    <Button
        android:id="@+id/portfolioView"
        android:layout_width="202dp"
        android:layout_height="75dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="169dp"
        android:layout_marginBottom="50dp"
        android:text="@string/portfolio"
        app:layout_constraintBottom_toTopOf="@+id/contactView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/contactView"
        android:layout_width="200dp"
        android:layout_height="82dp"
        android:layout_marginStart="158dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="50dp"
        android:text="@string/contact"
        app:layout_constraintBottom_toTopOf="@+id/aboutView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/portfolioView" />

    <Button
        android:id="@+id/aboutView"
        android:layout_width="186dp"
        android:layout_height="76dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="169dp"
        android:layout_marginBottom="80dp"
        android:text="@string/about"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.391"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactView" />

</androidx.constraintlayout.widget.ConstraintLayout>